chore: header design complete

--- a/index.html
+++ b/index.html
@@ -35,6 +35,40 @@
         </button>
       </div>
     </nav>
+
+    <div class="container">
+      <form action="">
+        <div class="search_input">
+          <input type="search" name="search" id="search" placeholder="Search">
+          <img src="./assets/icons/search.svg" alt="">
+        </div>
+      </form>
+
+      <div class="main_content">
+        <div class="socials">
+          <a href="#">
+            <img src="./assets/icons/instagram.svg" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./assets/icons/youtube.svg" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./assets/icons/twitter.svg" alt="" srcset="">
+          </a>
+          <a href="#">
+            <img src="./assets/icons/tiktok.svg" alt="" srcset="">
+          </a>
+        </div>
+        <div class="main">
+          <h1>
+            Street Style Unleashed
+          </h1>
+          <a class="pry_btn" href="#">Shop Now</a>
+        </div>
+        <div></div>
+      </div>
+    </div>
+
   </header>
 </body>
 </html>
