chore: best sellers section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,94 @@
         <div></div>
       </div>
     </div>
-
   </header>
+
+  <section>
+    <div class="title">
+      <h2>Best Sellers</h2>
+
+      <div>
+        <a href="#">Forum</a>
+        <a href="#">For her</a>
+        <a href="#" class="sec_btn">See All</a>
+      </div>
+    </div>
+
+    <ul class="best_sellers">
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/bucket_hat.webp" alt="Bucket Hat">
+          <div>
+            <h3>Bucket Hat</h3>
+            <h3>$12.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/sneaker.jpg" alt="Bucket Hat">
+          <div>
+            <h3>White Sneaker</h3>
+            <h3>$32.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.7
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/hoodie.webp" alt="Bucket Hat">
+          <div>
+            <h3>Teddy Hoodie</h3>
+            <h3>$28.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/sweatpants.jpg" alt="Bucket Hat">
+          <div>
+            <h3>Fleece Sweatpants</h3>
+            <h3>$35.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+
+    </ul>
+  </section>
+
+  <section class="gray_bg">
+    <div>
+      <h2>
+        Get the app
+      </h2>
+      <p>
+        Special offers and early access to sales</p>
+      <a href="
+      " class="pry_btn">Download</a>
+    </div>
+  </section>
 </body>
 </html>
