page design complete

--- a/index.html
+++ b/index.html
@@ -142,12 +142,11 @@
           </p>
         </a>
       </li>
-
     </ul>
   </section>
 
   <section class="gray_bg">
-    <div>
+    <div class="logo_bg">
       <h2>
         Get the app
       </h2>
@@ -157,5 +156,136 @@
       " class="pry_btn">Download</a>
     </div>
   </section>
+
+  <section class="discount">
+    <img src="./assets/model.jpg" alt="">
+    <div>
+      <h2>Up to 60% discount</h2>
+      <p>Season sale: You won't find better prices</p>
+
+      <div class="btns">
+        <a href="#" class="sec_btn">Him</a>
+        <a href="#" class="sec_btn">Her</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="new">
+    <div class="intro">
+      <h2>New In</h2>
+      <p>Winter is no excuse to not be stylish. Choose from the new collection and prove it.</p>
+    </div>
+    <a href="" class="pry_btn">See All</a>
+  </section>
+  <section class="new_products">
+    <ul class="best_sellers">
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/bucket_hat.webp" alt="Bucket Hat">
+          <div>
+            <h3>Bucket Hat</h3>
+            <h3>$12.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/sneaker.jpg" alt="Bucket Hat">
+          <div>
+            <h3>White Sneaker</h3>
+            <h3>$32.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.7
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/hoodie.webp" alt="Bucket Hat">
+          <div>
+            <h3>Teddy Hoodie</h3>
+            <h3>$28.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="product_img" src="./assets/sweatpants.jpg" alt="Bucket Hat">
+          <div>
+            <h3>Fleece Sweatpants</h3>
+            <h3>$35.00</h3>
+          </div>
+          <p>
+            <img class="star" src="./assets/icons/star.svg" alt="">
+            <span>
+            4.5
+            </span>
+          </p>
+        </a>
+      </li>
+    </ul>
+  </section>
+
+
+  <footer>
+    <div class="container">
+      <div class="top">
+        <div class="contact">
+          <a href="" class="logo">
+            <img src="./assets/logo.svg" alt="">
+          </a>
+                  <div class="socials">
+            <a href="#">
+              <img src="./assets/icons/instagram.svg" alt="" srcset="">
+            </a>
+            <a href="#">
+              <img src="./assets/icons/youtube.svg" alt="" srcset="">
+            </a>
+            <a href="#">
+              <img src="./assets/icons/twitter.svg" alt="" srcset="">
+            </a>
+            <a href="#">
+              <img src="./assets/icons/tiktok.svg" alt="" srcset="">
+            </a>
+          </div>
+        </div>
+
+        <div class="newsletter">
+          <h3>Get Updated with our news</h3>
+          <form action="">
+            <input type="email" name="" id="">
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="logo_bg">
+        <div class="navbar_items">
+                  <a href="#">Home</a>
+        <a href="#">Him</a>
+        <a href="#">Her</a>
+        <a href="#">Outlet</a>
+        <a href="#">Blog</a>
+        </div>
+      </div>
+    </div>
+
+  </footer>
 </body>
 </html>
